<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Currency Conversion</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="txtTitle">Currency Conversion</string>
    <string name="hint">U.S. Dollars</string>
    <string name="radEuros">Euros</string>
    <string name="radPesos">Mexican Pesos</string>
    <string name="radCanadian">Canadian Dollars</string>
    <string name="btnConvert">Convert</string>

</resources>
